Version-check-guarded intrinsics are now optional if the Java version is lower than the introduced version.